# career-copilot

./: .dockerignore  .env.example  .gitignore  Dockerfile  MVP_RUNBOOK.md  README.md  RUNBOOK.md  alembic.ini  build_backend.py  pyproject.toml
alembic/: env.py  script.py.mako
app/: main.py
docs/: PipelineExecutionQuickStart.md  PipelineExecutionTracking.md  document_mutation_service.md  evaluation_snapshot_migration.md  local-operational-routine.md  project-structure.md  readiness_evaluation_integration.md  readiness_evaluation_service.md  recommendation_categories.md
scripts/: check_ai_runs.py  debug_vacancy_analysis_parser.py  dev_db_counts.py  dev_db_reset.py  import_analyze_vacancy_utf8.py  list_recent_vacancy_analyses.py  smoke_mvp_flow.py  test_orchestrator_break.py  test_orchestrator_manual.py  verify_pdf_extraction_utf8.py
tests/: conftest.py  test_access_scope.py  test_achievement_extraction_service.py  test_achievement_proof_review_api.py  test_ai_model_override.py  test_ai_orchestrator.py  test_ai_smoke.py  test_application_list_api.py  test_application_package_integrity.py  test_application_status_api_flow.py  test_application_status_history.py  test_application_status_transitions.py  test_auth_audit.py  test_auth_sessions.py  test_cover_letter_factual.py  test_cover_letter_generation_service.py  test_document_activate.py  test_document_active_resolution.py  test_document_content_json_audit.py  test_document_diff.py  test_document_docx_export_api.py  test_document_export_api.py  test_document_rollback.py  test_execution_events_api.py  test_health.py  (+25 more)
(+261 files in other folders)
