[project]
name = "career-copilot"
version = "0.1.0"
description = "AI Career Copilot for HH"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "PyMuPDF>=1.24.10",
    "docx2txt>=0.8",
    "python-docx>=1.1.2",
    "beautifulsoup4>=4.12.3",
    "sqlalchemy>=2.0.32",
    "asyncpg>=0.29.0",
    "psycopg[binary]>=3.2.1",
    "alembic>=1.13.2",
    "python-multipart>=0.0.9",
    "redis>=5.0.8",
    "arq>=0.26.0",
    "boto3>=1.35.0",
    "httpx>=0.27.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.8",
    "ruff>=0.6.2",
    "mypy>=1.11.1",
]

frontend = [
    "streamlit>=1.38.0",
]

[build-system]
requires = []
build-backend = "build_backend"
backend-path = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
